--- a/style/blog_section.css
+++ b/style/blog_section.css
@@ -1,11 +1,8 @@
-.section-blog {
-  margin-top: 94px;
-}
-
 .discription-flowers {
   display: flex;
   justify-content: center;
   gap: 28px;
+  margin-top: 94px;
 }
 
 .block-discription {
@@ -45,6 +42,7 @@
   border: 0px;
   border-radius: 6px;
   background-color: #46a358;
+  display: inline-block;
 }
 
 .arrow-right-discription-card {
@@ -68,7 +66,6 @@
 .title-blog-section {
   font-weight: 700;
   font-size: 30px;
-  line-height: 16px;
   margin-bottom: 15px;
 }
 
